# DiligentSamples

Samples/: CMakeLists.txt
Samples/TerrainRenderer/: CMakeLists.txt  readme.md
Samples/TerrainRenderer/assets/shaders/: earth.psh  earth.vsh  light.psh  light.vsh
Samples/TerrainRenderer/src/: TerrainRenderer.cpp  TerrainRenderer.h
Samples/TerrainRenderer/src/Terrain/: EarthMesh.cpp  EarthMesh.h
